# platoengine

./: .gitignore  CMakeLists.txt  README.md  new-file
apps/alpso_proxy/: CMakeLists.txt  Plato_ProxyAppALPSO.hpp  ProxyMainALPSO.cpp
apps/cogent/: CMakeLists.txt  main.cpp
apps/esp/: CMakeLists.txt  PlatoESPApp.cpp  PlatoESPApp.hpp  PlatoESPPythonModule.cpp  Plato_ESP.cpp
apps/ksal_proxy/: CMakeLists.txt  KsalProxyMain.cpp  Plato_KsalProxyApp.hpp
apps/services/: CMakeLists.txt  PlatoApp.cpp  PlatoApp.hpp  Plato_Main.cpp  ServicesPythonModule.cpp
apps/statics/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/1Load_OC_with_XMLGenerator/: 1Load_OC_with_XMLGenerator.ref.exo  CMakeLists.txt  input_mesh.exo  plato_input_deck.i
examples/2Load_MMA/: 2Load_MMA.exodiff_commands  2Load_MMA.ref.exo  interface.xml  mpirun.source
examples/2Load_OC/: interface.xml  lightmp1.inp  platoApp.xml
examples/2Load_OC_FinalWrite/: 2Load_OC_FinalWrite.ref.exo  interface.xml  lightmp2.inp  lightmp2.xml  platoApp.xml
examples/2Load_OC_Restart/: CMakeLists.txt  initialguess.exo  interface.xml  lightmp1.inp  platoApp.xml
examples/2Load_OC_Variables/: CMakeLists.txt  interface.xml  lightmp.xml  localApp.xml  platoApp.xml
examples/2Load_absolute_filter_OC/: 2Load_absolute_filter_OC.ref.exo  CMakeLists.txt  history01.jou  history02.jou  interface.xml  lightmp2.inp  platoApp.xml
examples/2Load_absolute_volume_OC/: interface.xml  platoApp.xml
examples/2Load_filterPower_OC/: interface.xml  platoApp.xml
examples/2Load_heaviside_OC/: CMakeLists.txt  interface.xml  platoApp.xml
examples/2Load_updatingHeaviside_OC/: interface.xml  platoApp.xml
examples/2Load_updatingTANH_OC/: interface.xml  platoApp.xml
examples/Albany_2Load_OC/: Albany_2Load_OC.ref.exo  CMakeLists.txt  interface.xml  mitchell3D.jou  nodal_oc1.xml  nodal_oc2.xml  platoApp.xml  platomain.xml
examples/Analyze_2Phys_Sym/: Analyze_2Phys_Sym.exodiff_commands  Analyze_2Phys_Sym.ref.exo  CMakeLists.txt  amgx.json  analyzeApp1.xml  analyzeApp2.xml  design_vol.exo  design_vol.jou  dynamicsInput.xml  interface.xml  platoApp.xml  platoMain.xml  staticsInput.xml
examples/Analyze_2Phys_Sym_XMLG/: Analyze_2Phys_Sym_XMLG.exodiff_commands  Analyze_2Phys_Sym_XMLG.ref.exo  CMakeLists.txt  plato_input_deck.i
examples/Analyze_BodyLoads_FDcheck/: CMakeLists.txt  interface.xml
examples/Analyze_CSMFit/: .logamgx  CMakeLists.txt  analyzeInput.xml  model.csm  opt.py  platoApp.xml
examples/Analyze_CompMin2D/: CMakeLists.txt  analyzeInput.xml  lbracket.exo
examples/Analyze_CompMin2D_MultiPerf/: Analyze_CompMin2D_MultiPerf.ref.exo  CMakeLists.txt  interface.xml  mitchell_tri.exo  mitchell_tri.xml  platoApp.xml  platoMain.xml
examples/Analyze_CompMin2D_Variables/: Analyze_CompMin2D_Variables.ref.exo  CMakeLists.txt  interface.xml  mitchell_tri.exo  mitchell_tri.jou  mitchell_tri.xml  platoApp.xml  platoMain.xml
examples/Analyze_CompMin2D_Variables_MLS/: Analyze_CompMin2D_Variables_MLS.ref.exo  CMakeLists.txt  alexaApp.xml  defines.xml  interface.xml  mitchell_tri.exo  mitchell_tri.xml  platoApp.xml  platoMain.xml  pointarray.xml
examples/Analyze_CompMin2D_XMLG/: CMakeLists.txt  lbracket.exo  plato_input_deck.i
examples/Analyze_CompMin3D/: Analyze_CompMin3D.exodiff_commands  CMakeLists.txt  alexaInput.xml  analyzeInput.xml  bolted_bracket.exo  bolted_bracket.jou  interface.xml  platoApp.xml  platoMain.xml
examples/Analyze_CompMin3D_2Load_XMLG/: CMakeLists.txt  beam.exo  plato_input_deck.i
examples/Analyze_CompMin3D_Belos/: CMakeLists.txt  alexaInput.xml  analyzeInput.xml  bolted_bracket.exo  platoApp.xml
examples/Analyze_CompMin3D_BodyLoads/: Analyze_CompMin3D_BodyLoads.ref.exo  amgx.json  bolted_bracket.exo  interface.xml
examples/Analyze_CompMin3D_GPSR/: CMakeLists.txt  analyzeApp.xml  analyzeInput.xml  bingo.txt  bolted_bracket.exo
examples/Analyze_CompMin3D_MLS/: alexaApp.xml  analyzeApp.xml  analyzeInput.xml  bolted_bracket.exo  bolted_bracket.jou  interface.xml  platoApp.xml  platoMain.xml
examples/Analyze_CompMin3D_MMA/: Analyze_CompMin3D_MMA.ref.exo  CMakeLists.txt  amgx.json  analyzeInput.xml  bolted_bracket.exo  interface.xml  platoApp.xml
examples/Analyze_CompMin3D_MMA_XMLG/: Analyze_CompMin3D_MMA_XMLG.ref.exo  plato_input_deck.i
examples/Analyze_CompMin3D_MultiBlock/: Analyze_CompMin3D_MultiBlock.exodiff_commands  Analyze_CompMin3D_MultiBlock.ref.exo  CMakeLists.txt  amgx.json  analyzeInput.xml  bb_2block.exo  interface.xml  platoMain.xml
examples/Analyze_CompMin3D_Orthotropic/: analyzeApp.xml  analyzeInput.xml  bolted_bracket.exo  interface.xml  platoMain.xml
examples/Analyze_CompMin3D_ROL_AL_XMLG/: CMakeLists.txt  plato_input_deck.i
examples/Analyze_CompMin3D_ROL_LC_2_XMLG/: plato_input_deck.i
examples/Analyze_CompMin3D_ROL_LC_3_XMLG/: mesh.exo  plato_input_deck.i
examples/Analyze_CompMin3D_ROL_LC_4_XMLG/: plato_input_deck.i
examples/Analyze_CompMin3D_ROL_LC_XMLG/: plato_input_deck.i
examples/Analyze_CompMin3D_Restart/: Analyze_CompMin3D_Restart.ref.exo  CMakeLists.txt  alexaInput.xml  analyzeApp.xml  analyzeInput.xml  bolted_bracket.exo  interface.xml  platoApp.xml
examples/Analyze_CompMin3D_XMLG/: CMakeLists.txt  bolted_bracket.exo  plato_input_deck.i
examples/Analyze_Disp_FDcheck/: analyzeInput.xml  bolted_bracket.exo  interface.xml  platoApp.xml
examples/Analyze_Disp_Opt/: Analyze_Disp_Opt.exodiff_commands  CMakeLists.txt  analyzeInput.xml  bolted_bracket.exo  interface.xml  platoApp.xml
examples/Analyze_Emech_FDcheck/: Analyze_Emech_FDcheck.ref.exo  alexaInput.xml  analyzeInput.xml  bolted_bracket.exo  interface.xml
examples/Analyze_HeatEq3D_FDcheck/: CMakeLists.txt  alexaInput.xml  analyzeInput.xml  bolted_bracket.exo  interface.xml
examples/Analyze_HeatEq3D_Norm/: .logamgx  Analyze_HeatEq3D_Norm.ref.exo  CMakeLists.txt  alexaInput.xml  analyzeInput.xml  bolted_bracket.exo  bolted_bracket.gen  interface.xml
examples/Analyze_Helmholtz3D/: Analyze_Helmholtz3D.ref.exo  CMakeLists.txt  helmholtzApp.xml  helmholtzInput.xml  interface.xml  platoApp.xml
(+1718 files in other folders)
